--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,6 +2,6 @@
 
 <form action="/register" method="POST">
     <input type="text" name="username" placeholder="Username">
-    <input type="passweord" name="password" placeholder="password">
+    <input type="password" name="password" placeholder="password">
     <button>Submit</button>
 </form>
