logout sayfası olusturuldu ve ayarlandı.

--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -4,3 +4,7 @@
 
 <img src="https://images.pexels.com/photos/1114897/pexels-photo-1114897.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
     alt="">
+
+<li><a href="/register">Sign Up!"</a></li>
+<li><a href="/login">Login"</a></li>
+<li><a href="/logout">Logout!"</a></li>
