--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,10 +1,13 @@
-<h1>This is the secret page!</h1>
+<% include partials/header %>
 
-<p>You found me!</p>
+<div style="margin-top: 50px;" class="ui main text container segment">
+    <img class="ui fluid image"
+        src="https://images.pexels.com/photos/1114897/pexels-photo-1114897.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+    <div class="ui link list">
+        <li><a class="ui big label active item" href="/register">Sign Up</a></li>
+        <li><a class="ui big label active item" href="/login">Login</a></li>
+        <li><a class="ui big label active item" href="/logout">Logout</a></li>
+    </div>
+</div>
 
-<img src="https://images.pexels.com/photos/1114897/pexels-photo-1114897.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-    alt="">
-
-<li><a href="/register">Sign Up!"</a></li>
-<li><a href="/login">Login"</a></li>
-<li><a href="/logout">Logout!"</a></li>
+<% include partials/footer %>
